--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.23.0, 12.20.0, 14.15.1, 15.x]
+        node-version: [10.0.0, 10.23.0, 12.20.0, 14.15.1, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
