--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,12 +13,13 @@ jobs:
   build:
 
     runs-on: windows-latest
-
+    
     strategy:
       matrix:
         node-version: [10.0.0, 10.23.0, 12.20.0, 14.15.1, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    if: ${{ always() }}
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
