--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: windows-latest
     
     strategy:
+      fail-fast: false
       matrix:
         node-version: [10.0.0, 10.23.0, 12.20.0, 14.15.1, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
