--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,11 +12,12 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: [matrix.os]
     
     strategy:
       fail-fast: false
       matrix:
+        os: [windows-latest, ubuntu-18.04]
         node-version: [10.0.0, 10.23.0, 12.20.0, 14.15.1, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
